WEBAPP/QND41K8S/qnd41app100/backups/ingress-qnd41-app-issuer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qnd41-app-ingress
  namespace: qnd41-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx" 
   # cert-manager.io/issuer: "letsencrypt-staging"
    cert-manager.io/issuer: "smartquail-issuer"
spec:
  tls:
  - hosts:
    - www.smartquail.io
    secretName: smartquail-io-secrets
  ingressClassName: nginx
  rules:
   - host: www.smartquail.io
     http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: qnd41-pro
                port:
                  number: 80
  defaultBackend:
    service:
      name: qnd41-pro
      port:
        number: 80
